# captioner

./: .gitignore  README.md  pyproject.toml
captioner/: content_block.py  io.py
data_examples/animals/dogs/chihuahua/: dog_1.txt  dog_2.txt
scripts/: folder_to_json.py  json_to_folder.py
tests/: test_content_blocks.py  test_io.py
