[tool.poetry]
name = "captioner"
version = "0.1.0"
description = "Captioning elements by blocks, especially images (for Stable Diffusion)"
authors = ["pjpollot <pollot.pierre@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
